# SimpleIpc

./: Allocator.hpp  CMakeLists.txt  CompilerOptions.cmake  IpcMessage.hpp  README.md  RelativeAllocator.cpp  RelativeAllocator.hpp  RingBuffer.hpp  SharedMem.cpp  SharedMem.hpp  SimpleIpc.cpp  SimpleIpc.hpp  SystemWideLockIf.hpp  main.cpp
SimpleUtils/: CMakeLists.txt  RelativeAllocator.cpp  RelativeAllocator.hpp
TestApp/: main.cpp
